clase repaso & machine  learning

--- a/#02. Data Manipulation & Visualization to Enhance the Discipline/02practice.ipynb
+++ b/#02. Data Manipulation & Visualization to Enhance the Discipline/02practice.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "4d60f5b0",
    "metadata": {},
    "source": [
     "<font size=\"+5\">#02. Data Manipulation & Visualization to Enhance the Discipline</font>"
@@ -9,6 +10,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "eb2f296d",
    "metadata": {},
    "source": [
     "<ul>\n",
@@ -20,6 +22,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3c183d94",
    "metadata": {},
    "source": [
     "# Load the Data"
@@ -27,6 +30,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1bed532c",
    "metadata": {},
    "source": [
     "> - By executing the below lines of code,\n",
@@ -36,6 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "aebd4bed",
    "metadata": {},
    "outputs": [
     {
@@ -74,6 +79,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d4888c4d",
    "metadata": {},
    "source": [
     "> - For example, `mpg`:\n",
@@ -83,7 +89,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
+   "id": "72334fc9",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +206,7 @@
        "4          70    usa                ford torino  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,6 +220,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "626e3212",
    "metadata": {},
    "source": [
     "# Scatterplot with 2 Variables"
@@ -220,6 +228,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "29192d6a",
    "metadata": {},
    "source": [
     "> - Variable in X Axis\n",
@@ -229,12 +238,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ec536afe",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "3ff74b1c",
    "metadata": {},
    "source": [
     "# Scatterplot with 3 variables"
@@ -242,6 +253,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "951bc8b2",
    "metadata": {},
    "source": [
     "> - Variable in X Axis\n",
@@ -252,12 +264,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "fb527a0c",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "0f1b09cf",
    "metadata": {},
    "source": [
     "# Other Data Visualization Figures"
@@ -265,6 +279,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5a47f32c",
    "metadata": {},
    "source": [
     "> We'll head over the 3 main libraries used in Python to visualize data: `matplotlib`, `seaborn` and `plotly`.\n",
@@ -279,6 +294,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ae141b32",
    "metadata": {},
    "source": [
     "## Seaborn"
@@ -286,6 +302,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "212bc8bb",
    "metadata": {},
    "source": [
     "### Seaborn Example Gallery"
@@ -293,6 +310,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6c67ec33",
    "metadata": {},
    "source": [
     "> - https://seaborn.pydata.org/examples/index.html"
@@ -301,12 +319,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2851e9cd",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "8ed45bab",
    "metadata": {},
    "source": [
     "### Repeat the same Visualization Figures "
@@ -314,6 +334,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "159eb235",
    "metadata": {},
    "source": [
     "> - Now with you `DataFrame` ↓"
@@ -322,6 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "e081e136",
    "metadata": {},
    "outputs": [
     {
@@ -450,12 +472,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "bbfe29a3",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "3ec55063",
    "metadata": {},
    "source": [
     "## Matplotlib"
@@ -463,6 +487,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2022f444",
    "metadata": {},
    "source": [
     "## Matplotlib Example Gallery"
@@ -470,6 +495,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8afd47d2",
    "metadata": {},
    "source": [
     "> - https://towardsdatascience.com/matplotlib-tutorial-with-code-for-pythons-powerful-data-visualization-tool-8ec458423c5e"
@@ -478,12 +504,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1c60a15d",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "f9ab7560",
    "metadata": {},
    "source": [
     "### Repeat the same Visualization Figures "
@@ -491,6 +519,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "eb5447bf",
    "metadata": {},
    "source": [
     "> - Now with you `DataFrame` ↓"
@@ -499,6 +528,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "570ea6f6",
    "metadata": {},
    "outputs": [
     {
@@ -627,12 +657,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "58164766",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "2e140d4f",
    "metadata": {},
    "source": [
     "## Plotly"
@@ -640,6 +672,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8db699ac",
    "metadata": {},
    "source": [
     "## Plotly Example Gallery"
@@ -647,6 +680,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5f5cf3d7",
    "metadata": {},
    "source": [
     "> - https://plotly.com/python/"
@@ -655,12 +689,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "82bb32cb",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "ef501953",
    "metadata": {},
    "source": [
     "### Repeat the same Visualization Figures "
@@ -668,6 +704,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "422f08d6",
    "metadata": {},
    "source": [
     "> - Now with you `DataFrame` ↓"
@@ -676,6 +713,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "be0723c7",
    "metadata": {},
    "outputs": [
     {
@@ -804,12 +842,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "22f5c28d",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "bc29c287",
    "metadata": {},
    "source": [
     "# Achieved Goals"
@@ -817,6 +857,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "dddccb2c",
    "metadata": {},
    "source": [
     "_Double click on **this cell** and place an `X` inside the square brackets (i.e., [X]) if you think you understand the goal:_\n",
@@ -832,13 +873,6 @@
     "  - We can achieve the same result with different approaches.\n",
     "  - For example, changing the colors of the points."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -851,7 +885,7 @@
    "hash": "414fd6d7c0f0aefb3d4e2db41edbeb0df03134e10d94a689550561b640a17652"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
