--- a/#02. Data Manipulation & Visualization to Enhance the Discipline/02session.ipynb
+++ b/#02. Data Manipulation & Visualization to Enhance the Discipline/02session.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "fab03625",
    "metadata": {},
    "source": [
     "<font size=\"+5\">#02. Data Manipulation & Visualization to Enhance the Discipline</font>"
@@ -9,6 +10,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3b568fe6",
    "metadata": {},
    "source": [
     "<ul>\n",
@@ -20,6 +22,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d59b8ec0",
    "metadata": {},
    "source": [
     "# Discipline to Search Solutions in Google"
@@ -27,6 +30,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "957505af",
    "metadata": {},
    "source": [
     "> Apply the following steps when **looking for solutions in Google**:\n",
@@ -46,6 +50,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "49db84a6",
    "metadata": {},
    "source": [
     "# Load the Data"
@@ -53,6 +58,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1f6c8d8a",
    "metadata": {},
    "source": [
     "> Download [this Excel](https://github.com/sotastica/data/raw/main/internet_usage_spain.xlsx).\n",
@@ -63,12 +69,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2f33ecb9",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "f77157fc",
    "metadata": {},
    "source": [
     "# `DataFrame` Manipulation"
@@ -76,6 +84,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "49ad7f31",
    "metadata": {},
    "source": [
     "> Could we solve the following questions with a `DataFrame` **object**?"
@@ -83,6 +92,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "00a4a668",
    "metadata": {},
    "source": [
     "## How many people are in each study category?"
@@ -91,12 +101,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8319fba0",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "bdcc8022",
    "metadata": {},
    "source": [
     "## Age average by internet usage"
@@ -105,12 +117,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "596ce101",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "56de3735",
    "metadata": {},
    "source": [
     "## Age average by internet usage and gender"
@@ -119,12 +133,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5963958b",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "92118f65",
    "metadata": {},
    "source": [
     "# Data Visualization with Python"
@@ -132,6 +148,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d2e8e40f",
    "metadata": {},
    "source": [
     "## Load Another Dataset"
@@ -139,6 +156,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7e9f863d",
    "metadata": {},
    "source": [
     "> We load this [csv file](https://raw.githubusercontent.com/mwaskom/seaborn-data/master/tips.csv).\n",
@@ -149,12 +167,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "bae5d143",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "ac247839",
    "metadata": {},
    "source": [
     "## Scatterplot"
@@ -162,6 +182,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "972d5107",
    "metadata": {},
    "source": [
     "### With `Matplotlib` library"
@@ -169,6 +190,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bc6fb285",
    "metadata": {},
    "source": [
     "> Scatterplot"
@@ -177,12 +199,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a49a07ce",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "071f45db",
    "metadata": {},
    "source": [
     "### With `Seaborn` library"
@@ -190,6 +214,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f9622261",
    "metadata": {},
    "source": [
     "> Scatterplot"
@@ -198,12 +223,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9018590b",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "4e144a47",
    "metadata": {},
    "source": [
     "### With `Plotly` library"
@@ -211,6 +238,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a586f6cc",
    "metadata": {},
    "source": [
     "> Scatterplot"
@@ -219,12 +247,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "95563c9c",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "55837ea9",
    "metadata": {},
    "source": [
     "## Other Data Visualization Figures"
@@ -232,6 +262,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "595a3a1e",
    "metadata": {},
    "source": [
     "### Histogram"
@@ -240,12 +271,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c6595009",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "c974a729",
    "metadata": {},
    "source": [
     "### Boxplot"
@@ -254,12 +287,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0b4602d6",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "87d931a8",
    "metadata": {},
    "source": [
     "### Bar Chart"
@@ -268,12 +303,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "28d17e8f",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "4a0c2898",
    "metadata": {},
    "source": [
     "### Pie Plot"
@@ -282,12 +319,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e917afa4",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "3e1be911",
    "metadata": {},
    "source": [
     "### Maps"
@@ -296,6 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a20888fa",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -311,7 +351,7 @@
    "hash": "414fd6d7c0f0aefb3d4e2db41edbeb0df03134e10d94a689550561b640a17652"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -325,7 +365,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.11"
   },
   "toc-autonumbering": true
  },
