--- a/#02. Data Manipulation & Visualization to Enhance the Discipline/02practice.ipynb
+++ b/#02. Data Manipulation & Visualization to Enhance the Discipline/02practice.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4d60f5b0",
    "metadata": {},
    "source": [
     "<font size=\"+5\">#02. Data Manipulation & Visualization to Enhance the Discipline</font>"
@@ -10,7 +9,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb2f296d",
    "metadata": {},
    "source": [
     "<ul>\n",
@@ -22,7 +20,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c183d94",
    "metadata": {},
    "source": [
     "# Load the Data"
@@ -30,7 +27,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1bed532c",
    "metadata": {},
    "source": [
     "> - By executing the below lines of code,\n",
@@ -40,7 +36,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "aebd4bed",
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +74,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4888c4d",
    "metadata": {},
    "source": [
     "> - For example, `mpg`:\n",
@@ -89,8 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "72334fc9",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +199,7 @@
        "4          70    usa                ford torino  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +213,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "626e3212",
    "metadata": {},
    "source": [
     "# Scatterplot with 2 Variables"
@@ -228,7 +220,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29192d6a",
    "metadata": {},
    "source": [
     "> - Variable in X Axis\n",
@@ -238,14 +229,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec536afe",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "3ff74b1c",
    "metadata": {},
    "source": [
     "# Scatterplot with 3 variables"
@@ -253,7 +242,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "951bc8b2",
    "metadata": {},
    "source": [
     "> - Variable in X Axis\n",
@@ -264,14 +252,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb527a0c",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "0f1b09cf",
    "metadata": {},
    "source": [
     "# Other Data Visualization Figures"
@@ -279,7 +265,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a47f32c",
    "metadata": {},
    "source": [
     "> We'll head over the 3 main libraries used in Python to visualize data: `matplotlib`, `seaborn` and `plotly`.\n",
@@ -294,7 +279,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae141b32",
    "metadata": {},
    "source": [
     "## Seaborn"
@@ -302,7 +286,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "212bc8bb",
    "metadata": {},
    "source": [
     "### Seaborn Example Gallery"
@@ -310,7 +293,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c67ec33",
    "metadata": {},
    "source": [
     "> - https://seaborn.pydata.org/examples/index.html"
@@ -319,14 +301,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2851e9cd",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "8ed45bab",
    "metadata": {},
    "source": [
     "### Repeat the same Visualization Figures "
@@ -334,7 +314,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "159eb235",
    "metadata": {},
    "source": [
     "> - Now with you `DataFrame` ↓"
@@ -343,7 +322,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "e081e136",
    "metadata": {},
    "outputs": [
     {
@@ -472,14 +450,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bbfe29a3",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "3ec55063",
    "metadata": {},
    "source": [
     "## Matplotlib"
@@ -487,7 +463,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2022f444",
    "metadata": {},
    "source": [
     "## Matplotlib Example Gallery"
@@ -495,7 +470,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8afd47d2",
    "metadata": {},
    "source": [
     "> - https://towardsdatascience.com/matplotlib-tutorial-with-code-for-pythons-powerful-data-visualization-tool-8ec458423c5e"
@@ -504,14 +478,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c60a15d",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "f9ab7560",
    "metadata": {},
    "source": [
     "### Repeat the same Visualization Figures "
@@ -519,7 +491,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb5447bf",
    "metadata": {},
    "source": [
     "> - Now with you `DataFrame` ↓"
@@ -528,7 +499,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "570ea6f6",
    "metadata": {},
    "outputs": [
     {
@@ -657,14 +627,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58164766",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "2e140d4f",
    "metadata": {},
    "source": [
     "## Plotly"
@@ -672,7 +640,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8db699ac",
    "metadata": {},
    "source": [
     "## Plotly Example Gallery"
@@ -680,7 +647,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f5cf3d7",
    "metadata": {},
    "source": [
     "> - https://plotly.com/python/"
@@ -689,14 +655,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82bb32cb",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "ef501953",
    "metadata": {},
    "source": [
     "### Repeat the same Visualization Figures "
@@ -704,7 +668,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "422f08d6",
    "metadata": {},
    "source": [
     "> - Now with you `DataFrame` ↓"
@@ -713,7 +676,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "be0723c7",
    "metadata": {},
    "outputs": [
     {
@@ -842,14 +804,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22f5c28d",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "bc29c287",
    "metadata": {},
    "source": [
     "# Achieved Goals"
@@ -857,7 +817,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dddccb2c",
    "metadata": {},
    "source": [
     "_Double click on **this cell** and place an `X` inside the square brackets (i.e., [X]) if you think you understand the goal:_\n",
@@ -873,6 +832,13 @@
     "  - We can achieve the same result with different approaches.\n",
     "  - For example, changing the colors of the points."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -885,7 +851,7 @@
    "hash": "414fd6d7c0f0aefb3d4e2db41edbeb0df03134e10d94a689550561b640a17652"
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -899,7 +865,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
