sesion redes neuronales

--- a/#02. Data Manipulation & Visualization to Enhance the Discipline/02practice.ipynb
+++ b/#02. Data Manipulation & Visualization to Enhance the Discipline/02practice.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "33cd67a4",
    "metadata": {},
    "source": [
     "<font size=\"+5\">#02. Data Manipulation & Visualization to Enhance the Discipline</font>"
@@ -9,17 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<ul>\n",
-    "    <li>Doubts? → Ask me in <img src=\"https://emoji.gg/assets/emoji/3970-discord.png\" style=\"height: 1em; vertical-align: middle;\"> <a href=\"https://discord.gg/cmB3KGsqMy\">Discord</a></li>\n",
-    "    <li>Tutorials → <img src=\"https://openmoji.org/php/download_asset.php?type=emoji&emoji_hexcode=E044&emoji_variant=color\" style=\"height: 1em; vertical-align: middle;\"> <a href=\"https://www.youtube.com/channel/UCovCte2I3loteQE_kRsfQcw\">YouTube</a></li>\n",
-    "    <li>Book Private Lessons → <span style=\"color: orange\">@</span> <a href=\"https://sotastica.com/reservar\">sotastica</a></li>\n",
-    "</ul>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
+   "id": "38879a25",
    "metadata": {},
    "source": [
     "# Load the Data"
@@ -27,6 +18,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c34d5ef4",
    "metadata": {},
    "source": [
     "> - By executing the below lines of code,\n",
@@ -36,6 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "001a5f19",
    "metadata": {},
    "outputs": [
     {
@@ -74,6 +67,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c2f3f101",
    "metadata": {},
    "source": [
     "> - For example, `mpg`:\n",
@@ -83,7 +77,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
+   "id": "c406f4fc",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +194,7 @@
        "4          70    usa                ford torino  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,6 +208,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "33054d95",
    "metadata": {},
    "source": [
     "# Scatterplot with 2 Variables"
@@ -220,6 +216,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a3b2ec88",
    "metadata": {},
    "source": [
     "> - Variable in X Axis\n",
@@ -229,12 +226,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "85b31f9a",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "ac5b52f1",
    "metadata": {},
    "source": [
     "# Scatterplot with 3 variables"
@@ -242,6 +241,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "81fdd33d",
    "metadata": {},
    "source": [
     "> - Variable in X Axis\n",
@@ -252,12 +252,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "65b5c746",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "fded139d",
    "metadata": {},
    "source": [
     "# Other Data Visualization Figures"
@@ -265,6 +267,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d29de477",
    "metadata": {},
    "source": [
     "> We'll head over the 3 main libraries used in Python to visualize data: `matplotlib`, `seaborn` and `plotly`.\n",
@@ -279,6 +282,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3db3b339",
    "metadata": {},
    "source": [
     "## Seaborn"
@@ -286,6 +290,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "52a499a6",
    "metadata": {},
    "source": [
     "### Seaborn Example Gallery"
@@ -293,6 +298,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f2856a25",
    "metadata": {},
    "source": [
     "> - https://seaborn.pydata.org/examples/index.html"
@@ -301,12 +307,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "345d5261",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "9fa6aa44",
    "metadata": {},
    "source": [
     "### Repeat the same Visualization Figures "
@@ -314,6 +322,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1465d73d",
    "metadata": {},
    "source": [
     "> - Now with you `DataFrame` ↓"
@@ -321,7 +330,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
+   "id": "09a7bc45",
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +447,7 @@
        "4          70    usa                ford torino  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,12 +460,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7274974b",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "ce7ca2d5",
    "metadata": {},
    "source": [
     "## Matplotlib"
@@ -463,6 +475,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f7ebea53",
    "metadata": {},
    "source": [
     "## Matplotlib Example Gallery"
@@ -470,6 +483,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2bcf2a65",
    "metadata": {},
    "source": [
     "> - https://towardsdatascience.com/matplotlib-tutorial-with-code-for-pythons-powerful-data-visualization-tool-8ec458423c5e"
@@ -478,12 +492,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "fef2c865",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "67015c07",
    "metadata": {},
    "source": [
     "### Repeat the same Visualization Figures "
@@ -491,6 +507,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cba6290e",
    "metadata": {},
    "source": [
     "> - Now with you `DataFrame` ↓"
@@ -498,7 +515,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
+   "id": "52e9646c",
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +632,7 @@
        "4          70    usa                ford torino  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -627,12 +645,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d2624efa",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "16edee19",
    "metadata": {},
    "source": [
     "## Plotly"
@@ -640,6 +660,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2bee38ee",
    "metadata": {},
    "source": [
     "## Plotly Example Gallery"
@@ -647,6 +668,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "efca365f",
    "metadata": {},
    "source": [
     "> - https://plotly.com/python/"
@@ -655,12 +677,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "97eb0a50",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "eba1f2f9",
    "metadata": {},
    "source": [
     "### Repeat the same Visualization Figures "
@@ -668,6 +692,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fefc39bb",
    "metadata": {},
    "source": [
     "> - Now with you `DataFrame` ↓"
@@ -675,7 +700,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
+   "id": "5f63e7d4",
    "metadata": {},
    "outputs": [
     {
@@ -791,7 +817,7 @@
        "4          70    usa                ford torino  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -804,12 +830,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b579a62c",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "3dffd3c4",
    "metadata": {},
    "source": [
     "# Achieved Goals"
@@ -817,6 +845,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "78d35ba6",
    "metadata": {},
    "source": [
     "_Double click on **this cell** and place an `X` inside the square brackets (i.e., [X]) if you think you understand the goal:_\n",
@@ -836,6 +865,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ab5eac37",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cbc3714b-0022-4fdf-a979-23a4a4c94ea5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -851,7 +889,7 @@
    "hash": "414fd6d7c0f0aefb3d4e2db41edbeb0df03134e10d94a689550561b640a17652"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -865,7 +903,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
