--- a/#04. Decision Tree. A Supervised Classification Model/04practice.ipynb
+++ b/#04. Decision Tree. A Supervised Classification Model/04practice.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
        "4               1  Female   44         PhD"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,10 +153,218 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>internet_usage</th>\n",
+       "      <th>age</th>\n",
+       "      <th>sex_Male</th>\n",
+       "      <th>education_High School</th>\n",
+       "      <th>education_Higher Level</th>\n",
+       "      <th>education_No studies</th>\n",
+       "      <th>education_PhD</th>\n",
+       "      <th>education_University</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>66</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>72</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>48</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>59</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>44</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2450</th>\n",
+       "      <td>1</td>\n",
+       "      <td>43</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2451</th>\n",
+       "      <td>1</td>\n",
+       "      <td>18</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2452</th>\n",
+       "      <td>0</td>\n",
+       "      <td>54</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2453</th>\n",
+       "      <td>1</td>\n",
+       "      <td>31</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2454</th>\n",
+       "      <td>0</td>\n",
+       "      <td>52</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2455 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      internet_usage  age  sex_Male  education_High School  \\\n",
+       "0                  0   66         0                      0   \n",
+       "1                  1   72         1                      0   \n",
+       "2                  1   48         1                      0   \n",
+       "3                  0   59         1                      0   \n",
+       "4                  1   44         0                      0   \n",
+       "...              ...  ...       ...                    ...   \n",
+       "2450               1   43         1                      0   \n",
+       "2451               1   18         0                      1   \n",
+       "2452               0   54         0                      0   \n",
+       "2453               1   31         1                      1   \n",
+       "2454               0   52         1                      0   \n",
+       "\n",
+       "      education_Higher Level  education_No studies  education_PhD  \\\n",
+       "0                          0                     0              0   \n",
+       "1                          0                     0              0   \n",
+       "2                          0                     0              0   \n",
+       "3                          0                     0              1   \n",
+       "4                          0                     0              1   \n",
+       "...                      ...                   ...            ...   \n",
+       "2450                       0                     0              0   \n",
+       "2451                       0                     0              0   \n",
+       "2452                       0                     0              0   \n",
+       "2453                       0                     0              0   \n",
+       "2454                       0                     0              0   \n",
+       "\n",
+       "      education_University  \n",
+       "0                        0  \n",
+       "1                        0  \n",
+       "2                        1  \n",
+       "3                        0  \n",
+       "4                        0  \n",
+       "...                    ...  \n",
+       "2450                     0  \n",
+       "2451                     0  \n",
+       "2452                     0  \n",
+       "2453                     0  \n",
+       "2454                     0  \n",
+       "\n",
+       "[2455 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.get_dummies(df, drop_first=True)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -611,7 +819,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.9.7"
   },
   "toc-autonumbering": true
  },
