--- a/#03. Machine Learning & Linear Regression/03session.ipynb
+++ b/#03. Machine Learning & Linear Regression/03session.ipynb
@@ -2752,7 +2752,7 @@
    "hash": "414fd6d7c0f0aefb3d4e2db41edbeb0df03134e10d94a689550561b640a17652"
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2766,7 +2766,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.7.6"
   },
   "toc-autonumbering": true
  },
