practicar algunas cosas

--- a/#01. Data Tables & Basic Concepts of Programming/01session.ipynb
+++ b/#01. Data Tables & Basic Concepts of Programming/01session.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2b269ab2",
    "metadata": {},
    "source": [
     "<font size=\"+5\">#01. Data Tables, Plots & Basic Concepts of Programming</font>"
@@ -10,7 +9,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d717c029",
    "metadata": {},
    "source": [
     "<ul>\n",
@@ -22,7 +20,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21647fb1",
    "metadata": {},
    "source": [
     "# Define a Variable"
@@ -30,7 +27,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5897997",
    "metadata": {},
    "source": [
     "> Asign an `object` (numbers, text) to a `variable`."
@@ -39,7 +35,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4de1b447",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +44,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "48e3599d-ded0-4269-8eda-8ac58a15ceb5",
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +64,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c6a660f7-6399-4893-88bd-2a4018316b23",
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +84,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f19f837",
    "metadata": {},
    "source": [
     "# The Registry (_aka The Environment_)"
@@ -99,7 +91,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f188a64",
    "metadata": {},
    "source": [
     "> Place where Python goes to **recognise what we type**."
@@ -108,7 +99,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "2ac38769-4b40-43ad-aa25-8d326c0cec76",
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +119,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ee3c09de-5277-42a4-a3f6-cfc869a0e386",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +139,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "90d175da",
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +159,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "cc8d4459-cca7-4ab1-9ec9-a574641f3ef9",
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +179,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "f4942dfd-3cfe-4595-a28e-726fd5930217",
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +198,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a698c50",
    "metadata": {},
    "source": [
     "# Use of Functions"
@@ -220,7 +205,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be13687e",
    "metadata": {},
    "source": [
     "## Predefined Functions in Python (_Built-in_ Functions)"
@@ -228,7 +212,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "665f30c9",
    "metadata": {},
    "source": [
     "> https://docs.python.org/3/library/functions.html"
@@ -237,7 +220,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "ffb118ea",
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +240,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "5e5350d4-2a11-4acf-9376-a443345d8f4c",
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +260,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "f809bfe4-e795-4bfc-99ea-e13cc2945636",
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +279,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "852a09aa",
    "metadata": {},
    "source": [
     "## Discipline to Search Solutions in Google"
@@ -307,7 +286,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "199b03c0",
    "metadata": {},
    "source": [
     "> Apply the following steps when **looking for solutions in Google**:\n",
@@ -327,7 +305,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2fe167b3",
    "metadata": {},
    "source": [
     "## External Functions"
@@ -335,7 +312,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e061cda9",
    "metadata": {},
    "source": [
     "> Download [this Excel](https://github.com/sotastica/data/raw/main/internet_usage_spain.xlsx).\n",
@@ -346,7 +322,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "b5abdbe1",
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +343,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "df0795a2-9c1b-444a-8fe9-bc3030bb4e56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +352,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "7c4ab87d-608c-4f54-abd1-6c51c3ac0f41",
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +373,6 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "ea42f0cb-7e35-4140-b343-86dd0ba83a79",
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +393,6 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "dd7d9bc1-acf8-48a2-a643-db3b3d43b5de",
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +415,6 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "fe202f46-adc1-4b84-bf9d-5f30dc075096",
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +481,6 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "c0e578c4-60f8-45e3-9109-8647a5ee1d33",
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +501,6 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "e40a4c95-5af9-48dc-ada1-2664a9956cff",
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +521,6 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "90232b64-24f3-4799-b310-800b0acc70aa",
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +547,6 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "c4be6f67-79f9-4736-8c0e-1bd4c5ca7d99",
    "metadata": {},
    "outputs": [
     {
@@ -721,7 +687,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "466b4768",
    "metadata": {},
    "source": [
     "## The Elements of Programming"
@@ -729,7 +694,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7319095",
    "metadata": {},
    "source": [
     "> - `Library`: where the code of functions are stored.\n",
@@ -740,7 +704,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b0ed9a2",
    "metadata": {},
    "source": [
     "## Code Syntax"
@@ -748,7 +711,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40165e23",
    "metadata": {},
    "source": [
     "**What happens inside the computer when we run the code?**\n",
@@ -761,7 +723,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd11c7c9-9aa4-48e2-9a7a-3ef4bceddac6",
    "metadata": {},
    "source": [
     "1. `libreria`\n",
@@ -776,7 +737,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "08eb2edc-5b68-4e04-a670-158a569d228d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -786,7 +746,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5a300424-c257-427f-9e38-d1dcddf14b19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -796,7 +755,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8f87ed24-f507-40c6-af66-fb499db09e2e",
    "metadata": {},
    "outputs": [
     {
@@ -937,7 +895,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c3753cd",
    "metadata": {},
    "source": [
     "## Functions inside Objects"
@@ -945,7 +902,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ec0e137",
    "metadata": {},
    "source": [
     "> - The `dog` makes `guau()`: `dog.guau()`\n",
@@ -956,7 +912,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "3fb186f1",
    "metadata": {},
    "outputs": [
     {
@@ -987,7 +942,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "64b1ce0d-b8cf-4ac2-a0ba-32c86b522f37",
    "metadata": {},
    "outputs": [
     {
@@ -1084,7 +1038,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "9d566ea9-da6f-43f8-ab56-4c47a7e6ff5a",
    "metadata": {},
    "outputs": [
     {
@@ -1118,7 +1071,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "6cc5ac7f-a665-4126-aa3c-d66753ba5707",
    "metadata": {},
    "outputs": [
     {
@@ -1141,7 +1093,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "b39ebebc-f1e3-4291-8850-0291f464385c",
    "metadata": {},
    "outputs": [
     {
@@ -1162,7 +1113,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "9a2dae2f-a0e2-4f72-8f13-803d3899ab1e",
    "metadata": {},
    "outputs": [
     {
@@ -1183,7 +1133,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "8132ebbe-c643-4d16-abac-dec70bb0026f",
    "metadata": {},
    "outputs": [
     {
@@ -1279,7 +1228,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "977bab3d",
    "metadata": {},
    "source": [
     "## Conclusion | Types of Functions"
@@ -1287,7 +1235,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7400d2a4",
    "metadata": {},
    "source": [
     "> 1. Buit-in (Predefined) Functions\n",
@@ -1297,7 +1244,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82f82c7b",
    "metadata": {},
    "source": [
     "# Accessing `Objects`"
@@ -1305,7 +1251,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "684b860a",
    "metadata": {},
    "source": [
     "> Objects are **data structures** that store information. \n",
@@ -1314,7 +1259,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8628e5f0",
    "metadata": {},
    "source": [
     "## Square Brackets `[]`"
@@ -1323,7 +1267,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "0577adb9",
    "metadata": {},
    "outputs": [
     {
@@ -1376,7 +1319,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "2d3925d9-56bb-4e0d-818c-9f554cc5e7ae",
    "metadata": {},
    "outputs": [
     {
@@ -1451,7 +1393,6 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "f485ffb6-e76b-4c33-9083-395fecb092f1",
    "metadata": {},
    "outputs": [
     {
@@ -1477,7 +1418,6 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "ee153679-f1a6-455c-99ed-42576293a549",
    "metadata": {},
    "outputs": [
     {
@@ -1607,7 +1547,6 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "0340975e-384a-4cb4-b440-501c71ae2163",
    "metadata": {},
    "outputs": [
     {
@@ -1698,7 +1637,6 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "9b70eaa5-bc76-433b-a6db-b41664400184",
    "metadata": {},
    "outputs": [
     {
@@ -1730,7 +1668,6 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "46f663c7-f82a-4205-aa7f-af56efe9590e",
    "metadata": {},
    "outputs": [
     {
@@ -1751,7 +1688,6 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "085cecc9-2a8a-40fe-9a29-c2a0e073d99c",
    "metadata": {},
    "outputs": [
     {
@@ -1783,7 +1719,6 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "4a20055e-4c35-4313-a36b-8c06366d88c9",
    "metadata": {},
    "outputs": [
     {
@@ -1815,7 +1750,6 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "908971d4-29d9-4de3-8e9b-acb607270c97",
    "metadata": {},
    "outputs": [
     {
@@ -1837,7 +1771,6 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "0d13b445-a242-47c3-ab24-8afd04c98a64",
    "metadata": {},
    "outputs": [
     {
@@ -1870,7 +1803,6 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "d0bd9c44-8212-44a0-a974-ca1a7c75c653",
    "metadata": {},
    "outputs": [
     {
@@ -1900,7 +1832,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6615e29",
    "metadata": {},
    "source": [
     "# Filter & Masking"
@@ -1909,7 +1840,6 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "d8b22aaa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1919,7 +1849,6 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "8191d503-e088-4c01-bfcb-34df9bb22dcd",
    "metadata": {},
    "outputs": [
     {
@@ -1951,7 +1880,6 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "95d0ce1e-3143-408d-8ba1-4fa31e1be390",
    "metadata": {},
    "outputs": [
     {
@@ -2093,7 +2021,6 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "847a8de4-340d-4975-bb43-f9a9f5b032fa",
    "metadata": {},
    "outputs": [
     {
@@ -2235,7 +2162,6 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "7aacedf3-1dcc-4735-baec-928878216fc5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2245,7 +2171,6 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "f6c81f1a-ef54-43d8-8804-42f60558d667",
    "metadata": {},
    "outputs": [
     {
@@ -2387,7 +2312,6 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "640f9723-adeb-4baf-bbfd-676bf55f4bef",
    "metadata": {},
    "outputs": [
     {
@@ -2529,7 +2453,6 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "b39a3c4f-e773-4e45-bfe9-182d8a891e14",
    "metadata": {},
    "outputs": [
     {
@@ -2604,7 +2527,6 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "0e1e1520-2c3d-411c-8e34-dc31f8095cfa",
    "metadata": {},
    "outputs": [
     {
@@ -2746,7 +2668,6 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "529647c9-e625-4ed0-8370-a024954f6899",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2756,7 +2677,6 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "ef5ba6f5-3850-4e71-b813-82e9a4edac5a",
    "metadata": {},
    "outputs": [
     {
@@ -2894,7 +2814,7 @@
    "hash": "414fd6d7c0f0aefb3d4e2db41edbeb0df03134e10d94a689550561b640a17652"
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2908,7 +2828,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.7.6"
   },
   "toc-autonumbering": true
  },
