--- a/#01. Data Tables & Basic Concepts of Programming/01session-Copy1.ipynb
+++ b/#01. Data Tables & Basic Concepts of Programming/01session-Copy1.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "140ba842",
    "metadata": {},
    "source": [
     "<font size=\"+5\">#01. Data Tables, Plots & Basic Concepts of Programming</font>"
@@ -10,7 +9,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d08397f",
    "metadata": {},
    "source": [
     "<ul>\n",
@@ -23,7 +21,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f83c919-8272-4396-928b-97f15c36586e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +130,7 @@
    "hash": "414fd6d7c0f0aefb3d4e2db41edbeb0df03134e10d94a689550561b640a17652"
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -147,7 +144,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.7.6"
   },
   "toc-autonumbering": true
  },
