--- a/#01. Data Tables & Basic Concepts of Programming/01session-Copy1.ipynb
+++ b/#01. Data Tables & Basic Concepts of Programming/01session-Copy1.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "384f4672",
    "metadata": {},
    "source": [
     "<font size=\"+5\">#01. Data Tables, Plots & Basic Concepts of Programming</font>"
@@ -9,6 +10,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8c49255f",
    "metadata": {},
    "source": [
     "<ul>\n",
@@ -21,6 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c4305f04",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +133,7 @@
    "hash": "414fd6d7c0f0aefb3d4e2db41edbeb0df03134e10d94a689550561b640a17652"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -144,7 +147,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.7"
   },
   "toc-autonumbering": true
  },
