--- a/#01. Data Tables & Basic Concepts of Programming/01session.ipynb
+++ b/#01. Data Tables & Basic Concepts of Programming/01session.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "f542cd22",
    "metadata": {},
    "source": [
     "<font size=\"+5\">#01. Data Tables, Plots & Basic Concepts of Programming</font>"
@@ -9,6 +10,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "13565a80",
    "metadata": {},
    "source": [
     "<ul>\n",
@@ -20,6 +22,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "15c72c3e",
    "metadata": {},
    "source": [
     "# Define a Variable"
@@ -27,6 +30,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f59fef5d",
    "metadata": {},
    "source": [
     "> Asign an `object` (numbers, text) to a `variable`."
@@ -35,6 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "f55525f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,6 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "700f34a4",
    "metadata": {},
    "outputs": [
     {
@@ -64,6 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "b823d589",
    "metadata": {},
    "outputs": [
     {
@@ -84,6 +91,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "da88ea49",
    "metadata": {},
    "source": [
     "# The Registry (_aka The Environment_)"
@@ -91,6 +99,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0ee6df5a",
    "metadata": {},
    "source": [
     "> Place where Python goes to **recognise what we type**."
@@ -99,6 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "4fbf6381",
    "metadata": {},
    "outputs": [
     {
@@ -119,6 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "7b7e0292",
    "metadata": {},
    "outputs": [
     {
@@ -139,6 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "57efc99c",
    "metadata": {},
    "outputs": [
     {
@@ -159,6 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "451ec186",
    "metadata": {},
    "outputs": [
     {
@@ -179,6 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "03ac0b66",
    "metadata": {},
    "outputs": [
     {
@@ -198,6 +212,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "12e922e9",
    "metadata": {},
    "source": [
     "# Use of Functions"
@@ -205,6 +220,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "55477b64",
    "metadata": {},
    "source": [
     "## Predefined Functions in Python (_Built-in_ Functions)"
@@ -212,6 +228,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8b7e7227",
    "metadata": {},
    "source": [
     "> https://docs.python.org/3/library/functions.html"
@@ -220,6 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "ab2e8647",
    "metadata": {},
    "outputs": [
     {
@@ -240,6 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "4bd3d917",
    "metadata": {},
    "outputs": [
     {
@@ -260,6 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "2b0dba2b",
    "metadata": {},
    "outputs": [
     {
@@ -279,6 +299,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bb254f66",
    "metadata": {},
    "source": [
     "## Discipline to Search Solutions in Google"
@@ -286,6 +307,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "67ddf734",
    "metadata": {},
    "source": [
     "> Apply the following steps when **looking for solutions in Google**:\n",
@@ -305,6 +327,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "340c9edc",
    "metadata": {},
    "source": [
     "## External Functions"
@@ -312,6 +335,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "458db385",
    "metadata": {},
    "source": [
     "> Download [this Excel](https://github.com/sotastica/data/raw/main/internet_usage_spain.xlsx).\n",
@@ -322,6 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "f74036e6",
    "metadata": {},
    "outputs": [
     {
@@ -343,6 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
+   "id": "74cf8d58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,6 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
+   "id": "3626870b",
    "metadata": {},
    "outputs": [
     {
@@ -373,6 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
+   "id": "5dc2f09e",
    "metadata": {},
    "outputs": [
     {
@@ -393,6 +421,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
+   "id": "eb1d95b7",
    "metadata": {},
    "outputs": [
     {
@@ -415,6 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
+   "id": "ef883912",
    "metadata": {},
    "outputs": [
     {
@@ -481,6 +511,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
+   "id": "64748d5a",
    "metadata": {},
    "outputs": [
     {
@@ -501,6 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
+   "id": "d716009c",
    "metadata": {},
    "outputs": [
     {
@@ -521,6 +553,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
+   "id": "2f47e3df",
    "metadata": {},
    "outputs": [
     {
@@ -547,6 +580,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
+   "id": "07d009be",
    "metadata": {},
    "outputs": [
     {
@@ -687,6 +721,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "524ba0b3",
    "metadata": {},
    "source": [
     "## The Elements of Programming"
@@ -694,6 +729,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f7188c7c",
    "metadata": {},
    "source": [
     "> - `Library`: where the code of functions are stored.\n",
@@ -704,6 +740,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1daf5da2",
    "metadata": {},
    "source": [
     "## Code Syntax"
@@ -711,6 +748,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "76c16abe",
    "metadata": {},
    "source": [
     "**What happens inside the computer when we run the code?**\n",
@@ -723,6 +761,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ce603563",
    "metadata": {},
    "source": [
     "1. `libreria`\n",
@@ -737,6 +776,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "15ecfa5f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -746,6 +786,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "2be8d4dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -755,6 +796,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "76c229ee",
    "metadata": {},
    "outputs": [
     {
@@ -895,6 +937,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ba2c94bd",
    "metadata": {},
    "source": [
     "## Functions inside Objects"
@@ -902,6 +945,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "30e0f559",
    "metadata": {},
    "source": [
     "> - The `dog` makes `guau()`: `dog.guau()`\n",
@@ -912,6 +956,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "680d432b",
    "metadata": {},
    "outputs": [
     {
@@ -942,6 +987,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "84d7557a",
    "metadata": {},
    "outputs": [
     {
@@ -1038,6 +1084,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "595f4626",
    "metadata": {},
    "outputs": [
     {
@@ -1071,6 +1118,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "6e338743",
    "metadata": {},
    "outputs": [
     {
@@ -1093,6 +1141,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "ad87686e",
    "metadata": {},
    "outputs": [
     {
@@ -1113,6 +1162,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "35ed37b9",
    "metadata": {},
    "outputs": [
     {
@@ -1133,6 +1183,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "53b7da1b",
    "metadata": {},
    "outputs": [
     {
@@ -1228,6 +1279,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f6a311fe",
    "metadata": {},
    "source": [
     "## Conclusion | Types of Functions"
@@ -1235,6 +1287,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "510dd58a",
    "metadata": {},
    "source": [
     "> 1. Buit-in (Predefined) Functions\n",
@@ -1244,6 +1297,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4d48f798",
    "metadata": {},
    "source": [
     "# Accessing `Objects`"
@@ -1251,6 +1305,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1e8d9a38",
    "metadata": {},
    "source": [
     "> Objects are **data structures** that store information. \n",
@@ -1259,6 +1314,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1c5ff416",
    "metadata": {},
    "source": [
     "## Square Brackets `[]`"
@@ -1267,6 +1323,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "e02c82d4",
    "metadata": {},
    "outputs": [
     {
@@ -1319,6 +1376,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
+   "id": "25fc0ee5",
    "metadata": {},
    "outputs": [
     {
@@ -1393,6 +1451,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
+   "id": "2442e02e",
    "metadata": {},
    "outputs": [
     {
@@ -1418,6 +1477,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
+   "id": "d3a6f774",
    "metadata": {},
    "outputs": [
     {
@@ -1547,6 +1607,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
+   "id": "7b77874a",
    "metadata": {},
    "outputs": [
     {
@@ -1637,6 +1698,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
+   "id": "da56f0ca",
    "metadata": {},
    "outputs": [
     {
@@ -1668,6 +1730,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
+   "id": "c5e22a90",
    "metadata": {},
    "outputs": [
     {
@@ -1688,6 +1751,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
+   "id": "e446723a",
    "metadata": {},
    "outputs": [
     {
@@ -1719,6 +1783,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
+   "id": "6b8ee0c1",
    "metadata": {},
    "outputs": [
     {
@@ -1750,6 +1815,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
+   "id": "a739cadc",
    "metadata": {},
    "outputs": [
     {
@@ -1771,6 +1837,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
+   "id": "5866577b",
    "metadata": {},
    "outputs": [
     {
@@ -1803,6 +1870,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
+   "id": "e2d0c44f",
    "metadata": {},
    "outputs": [
     {
@@ -1832,6 +1900,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e76c906c",
    "metadata": {},
    "source": [
     "# Filter & Masking"
@@ -1840,6 +1909,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
+   "id": "f4119e34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1849,6 +1919,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
+   "id": "d8493b61",
    "metadata": {},
    "outputs": [
     {
@@ -1880,6 +1951,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
+   "id": "ebeb513e",
    "metadata": {},
    "outputs": [
     {
@@ -2021,6 +2093,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
+   "id": "c5b771cd",
    "metadata": {},
    "outputs": [
     {
@@ -2162,6 +2235,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
+   "id": "fb23b006",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2171,6 +2245,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
+   "id": "8b90fec6",
    "metadata": {},
    "outputs": [
     {
@@ -2312,6 +2387,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
+   "id": "0c946e5c",
    "metadata": {},
    "outputs": [
     {
@@ -2453,6 +2529,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
+   "id": "4647bd45",
    "metadata": {},
    "outputs": [
     {
@@ -2527,6 +2604,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
+   "id": "2dbdd17e",
    "metadata": {},
    "outputs": [
     {
@@ -2668,6 +2746,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
+   "id": "5f05fe1f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2677,6 +2756,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
+   "id": "9ba61360",
    "metadata": {},
    "outputs": [
     {
@@ -2814,7 +2894,7 @@
    "hash": "414fd6d7c0f0aefb3d4e2db41edbeb0df03134e10d94a689550561b640a17652"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2828,7 +2908,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.7"
   },
   "toc-autonumbering": true
  },
